tests/baselines/reference/asyncGenerators.objectLiteralMethod.16.es5.errors.txt
tests/cases/conformance/asyncGenerators/es5/objectLiteralMethods/asyncGenerators.objectLiteralMethod.16.es5.ts(3,14): error TS1109: Expression expected.


==== tests/cases/conformance/asyncGenerators/es5/objectLiteralMethods/asyncGenerators.objectLiteralMethod.16.es5.ts (1 errors) ====
    const x = {
        async * f() {
            await;
                 ~
!!! error TS1109: Expression expected.
        }
    }